Remove unnecessary IDE configuration files and update JavaFX dependencies in build.sbt